--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
           mv build/*.tar.gz release
 
       - name: Upload artifacts
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: linux-latest
           path: release
@@ -48,11 +48,14 @@ jobs:
           mkdir build\windows-amd64
           $Env:GOARCH = "amd64"
           go build -trimpath -ldflags "-X main.Build=$($Env:GITHUB_REF.Substring(11))" -o build\windows-amd64\oneclick-mesh-client.exe ./cmd/nebula-service
+          mkdir build\windows-arm64
+          $Env:GOARCH = "arm64"
+          go build -trimpath -ldflags "-X main.Build=$($Env:GITHUB_REF.Substring(11))" -o build\windows-arm64\oneclick-mesh-client.exe ./cmd/nebula-service
           mkdir build\dist\windows
           mv dist\windows\wintun build\dist\windows\
 
       - name: Upload artifacts
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: windows-latest
           path: build
@@ -99,7 +102,7 @@ jobs:
           fi
 
       - name: Upload artifacts
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: darwin-latest
           path: ./release/*
@@ -109,66 +112,28 @@ jobs:
     needs: [build-linux, build-darwin, build-windows]
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
+
       - name: Download artifacts
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v3
+        with:
+          path: artifacts
 
       - name: Zip Windows agent only
         run: |
-          cd windows-latest
+          cd artifacts/windows-latest
           cp windows-amd64/* .
           zip -r oneclick-mesh-client-only-windows-amd64.zip oneclick-mesh-client.exe dist
+          cp windows-arm64/* .
+          zip -r oneclick-mesh-client-only-windows-arm64.zip oneclick-mesh-client.exe dist
 
       - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
-
-      ##
-      ## Upload assets (I wish we could just upload the whole folder at once...
-      ##
-
-      - name: Upload darwin zip agent only
-        uses: actions/upload-release-asset@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./darwin-latest/oneclick-mesh-client-only-darwin.zip
-          asset_name: oneclick-mesh-client-only-darwin.zip
-          asset_content_type: application/zip
-
-      - name: Upload windows-amd64 agent only
-        uses: actions/upload-release-asset@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./windows-latest/oneclick-mesh-client-only-windows-amd64.zip
-          asset_name: oneclick-mesh-client-only-windows-amd64.zip
-          asset_content_type: application/zip
-
-      - name: Upload linux-amd64 agent only
-        uses: actions/upload-release-asset@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./linux-latest/oneclick-mesh-client-only-linux-amd64.tar.gz
-          asset_name: oneclick-mesh-client-only-linux-amd64.tar.gz
-          asset_content_type: application/zip
-
-      - name: Upload linux-amd64 agent-cert only
-        uses: actions/upload-release-asset@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./linux-latest/oneclick-mesh-client-cert-only-linux-amd64.tar.gz
-          asset_name: oneclick-mesh-client-cert-only-linux-amd64.tar.gz
-          asset_content_type: application/zip
+        run: |
+          cd artifacts
+          gh release create \
+            --verify-tag \
+            --title "Release ${{ github.ref_name }}" \
+            "${{ github.ref_name }}" \
+            *-latest/*.zip *-latest/*.tar.gz
